retrieve multiple organizations and people by external id
