# models/organization_service.go
@@ -8,6 +8,7 @@ type OrganizationService interface {
 	UpdateOrganization(context.Context, *Organization) (*Organization, error)
 	GetOrganization(context.Context, string) (*Organization, error)
 	GetOrganizationsByIdentifier(context.Context, ...*URN) ([]*Organization, error)
+	GetOrganizationsById(context.Context, ...string) ([]*Organization, error)
 	DeleteOrganization(context.Context, string) error
 	EachOrganization(context.Context, func(*Organization) bool) error
 	GetOrganizations(context.Context) ([]*Organization, string, error)
